# FL-SecureProto

./: .gitignore  README.md  client_app.py  pyproject.toml  requirements.txt  server_app.py
None/.flwr/apps/Yuuchi.myfl-flwr-pytorch.1.0.0.f4f5f2c8/: pyproject.toml  test.py
None/.flwr/apps/Yuuchi.myfl-flwr-pytorch.1.0.0.f4f5f2c8/myfl_flwr_pytorch/: client_app.py
certificates/: ca.crt  ca.key  ca.srl  server.csr  server.key  server.pem
certs/: client1.crt  client2.crt  client3.crt  server.crt
clients/: client1.py  client2.py  client3.py
keys/: client_credentials_1  client_credentials_1.pub  client_credentials_2  client_credentials_2.pub  client_credentials_3  client_credentials_3.pub  client_public_keys.csv
myfl_flwr_pytorch/: __init__.py  server_app.py  task.py
server/: main.py
