[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myfl-flwr-pytorch"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.17.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "Yuuchi"

[tool.flwr.app.components]
serverapp = "myfl_flwr_pytorch.server_app:app"
clientapp = "myfl_flwr_pytorch.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-fit = 0.5
local-epochs = 1

[tool.flwr.federations]
default = "distributed"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10

[tool.flwr.federations.distributed]
client-app = "myfl_flwr_pytorch.client_app:app"
server-app = "myfl_flwr_pytorch.server_app:app"
address = "192.168.1.9:9093" # thay IP của máy chạy SuperLink
insecure = true