[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myfl-flwr-pytorch"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.17.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.6.0",
    "torchvision==0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "Yuuchi"

[tool.flwr.app.components]
serverapp = "server_app:app"
clientapp = "client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-fit = 0.5
local-epochs = 1

[tool.flwr.federations]
default = "distributed"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10

[tool.flwr.federations.distributed]
client-app = "client_app:app"
server-app = "server_app:app"
address = "192.168.1.9:9093" # thay IP của máy chạy SuperLink
insecure = true